@@ -9,3 +9,11 @@ Problem: Not scalable and less readability in the future if kept
 Reason:
 Right now we only have 6 vehicletypes so you can argue that this isnt a problem but if we would add more vehicletypes in the future it would take unnecessary time to add but most important it wouldnt be readable if we started to add more vehicletypes.
 If there is only 6 vehicletypes a switchcase would be better used here for easy readability
+
+3. Changed GetTollFee(DateTime date, Vehicle vehicle)
+Problem: Not scalable and is hard to read.
+Reason:
+Ill start by saying there is two ways to change this method.
+1. First way to change this is that I would have to make an assumption and that assumption would be that the times and prices will never change and will always be the same. in that case a switch statement would be perfect instead of a alot of if, else if statements. swtich statements would make it more readable.
+2. Secound way is that I assume we would change the times and even add more times in the future and even change prices.
+So a Dictionary is added on top of the file to make it easier for next programmer to add a new timespans and change prices. By adding hours and minutes in the first pair(key) in the dictonary and adding price as the value.
